--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mickey"
-version = "0.1.1"
+version = "0.2.1"
 edition = "2021"
 license = "Apache-2.0"
 description = "Accessibility utility to move mouse cursor using keyboard with binary search algorithm"
@@ -18,3 +18,6 @@ clap = { version = "3.1.18", features = ["derive"]}
 anyhow = "1.0.57"
 serde = { version = "1.0.137", features = ["derive"] }
 bincode = "1.3.3"
+x11-screenshot = "0.2.1"
+image = "0.23.13"
+arboard = "2.1.1"
