--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,8 @@ bincode = "1.3.3"
 x11-screenshot = "0.2.1"
 image = "0.23.13"
 arboard = "2.1.1"
+
+
+[[bin]]
+name = "mickey"
+path = "src/main.rs"
